# Rust

./: .gitignore
TemaReddit/: Cargo.toml  foxes.json.txt
TemaReddit/src/: main.rs
download_images/: Cargo.toml
download_images/src/: main.rs
fiirust_wasm/src/: lib.rs
gameOfLife/: Cargo.toml  initial.txt
gameOfLife/src/: main.rs
jsonandstuff/serde/: Cargo.toml  person.json
jsonandstuff/serde/src/: main.rs
lab1/src/: main.rs
lab10/: Cargo.toml
lab10/src/: archive.rs  main.rs
lab11/src/: main.rs
lab3/: Cargo.toml
lab3/src/: main.rs
lab4/: Cargo.toml  prescurtari
lab4/src/: main.rs
lab5/: Rust - Shortcut.lnk
lab5/src/: main.rs
lab6/: Cargo.toml  text
lab6/src/: main.rs
lab7/: Cargo.toml  out.txt
lab7/src/: main.rs
reddit/: Cargo.toml
reddit/src/: main.rs
steam_workshop/: Cargo.toml
steam_workshop/src/: main.rs
