[package]
name = "download_iamges"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
imageproc = "0.23.0"
blocking = "1.2.0"
ureq = "2.5.0"
