[package]
name = "reddit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
ureq = "2.5.0"
serde = "1"
serde_derive = "1"
serde_json = "1"
chrono = "0.4.23"
reqwest = { version = "0.10.0-alpha.2", features = ["blocking"] }
